--- a/Projects/Readme
+++ b/Projects/Readme
@@ -1,6 +1,6 @@
-Hello,
+Hello World,
 
 This folder contains some projects that have been carried out to improve internal performance, mainly issues related to automation, data interpretation, visualization and calculations.
 
-Best regards,
+Best regards and thank you for your time,
 Luis
